--- a/k8s_files/deployment.yaml
+++ b/k8s_files/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: pandacloud-container
-        image: 376129865024.dkr.ecr.us-east-1.amazonaws.com/amazon-prime:2
+        image: 376129865024.dkr.ecr.us-east-1.amazonaws.com/amazon-prime:latest
         ports:
         - containerPort: 3000
 ...
